// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="nut-menu"
  >
    <div
      class="nut-menu-bar"
    >
      <div
        class="nut-menu-title nut-menu-title-0"
      >
        <div
          class="nut-menu-title-text"
        >
          全部商品
        </div>
        <svg
          aria-labelledby="ArrowDown"
          class="nut-icon nut-icon-ArrowDown nut-menu-title-icon"
          role="presentation"
          style="width: 12px; height: 12px;"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M153.81 362.67a10.67 10.67 0 0 0-7.68 18.13L512 746.67 877.87 380.8a10.67 10.67 0 0 0-7.68-18.13h-60.38a10.03 10.03 0 0 0-7.46 3.2L512 656.21 221.65 365.87a10.88 10.88 0 0 0-7.46-3.2z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
    <div
      class="nut-menu-container"
    >
      <div
        class="nut-menu-container-wrap"
        style="display: none;"
      >
        <div
          class="nut-menu-container-content"
        >
          <div
            class="nut-menu-container-item active"
            style="flex-basis: 100%;"
          >
            <i
              class="nut-menu-container-item-icon"
            >
              <svg
                aria-labelledby="Check"
                class="nut-icon nut-icon-Check "
                color=""
                role="presentation"
                viewBox="0 0 49 48"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M45.121 16.121 47.243 14 43 9.757l-2.121 2.122L19 33.757 7.121 21.88 5 19.757.757 24l2.122 2.121L14.757 38l2.122 2.121L19 42.243l2.121-2.122L23.243 38z"
                  fill="currentColor"
                />
              </svg>
            </i>
            <div
              class="nut-menu-container-item-title "
            >
              全部商品
            </div>
          </div>
          <div
            class="nut-menu-container-item "
            style="flex-basis: 100%;"
          >
            <div
              class="nut-menu-container-item-title "
            >
              新款商品
            </div>
          </div>
          <div
            class="nut-menu-container-item "
            style="flex-basis: 100%;"
          >
            <div
              class="nut-menu-container-item-title "
            >
              活动商品
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match snapshot of two columns in one line 1`] = `
<DocumentFragment>
  <div
    class="nut-menu"
  >
    <div
      class="nut-menu-bar"
    >
      <div
        class="nut-menu-title nut-menu-title-0"
      >
        <div
          class="nut-menu-title-text"
        >
          全部商品
        </div>
        <svg
          aria-labelledby="ArrowDown"
          class="nut-icon nut-icon-ArrowDown nut-menu-title-icon"
          role="presentation"
          style="width: 12px; height: 12px;"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M153.81 362.67a10.67 10.67 0 0 0-7.68 18.13L512 746.67 877.87 380.8a10.67 10.67 0 0 0-7.68-18.13h-60.38a10.03 10.03 0 0 0-7.46 3.2L512 656.21 221.65 365.87a10.88 10.88 0 0 0-7.46-3.2z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
    <div
      class="nut-menu-container"
    >
      <div
        class="nut-menu-container-wrap"
        style="display: none;"
      >
        <div
          class="nut-menu-container-content"
        >
          <div
            class="nut-menu-container-item active"
            style="flex-basis: 50%;"
          >
            <i
              class="nut-menu-container-item-icon"
            >
              <svg
                aria-labelledby="Check"
                class="nut-icon nut-icon-Check "
                color=""
                role="presentation"
                viewBox="0 0 49 48"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M45.121 16.121 47.243 14 43 9.757l-2.121 2.122L19 33.757 7.121 21.88 5 19.757.757 24l2.122 2.121L14.757 38l2.122 2.121L19 42.243l2.121-2.122L23.243 38z"
                  fill="currentColor"
                />
              </svg>
            </i>
            <div
              class="nut-menu-container-item-title "
            >
              全部商品
            </div>
          </div>
          <div
            class="nut-menu-container-item "
            style="flex-basis: 50%;"
          >
            <div
              class="nut-menu-container-item-title "
            >
              新款商品
            </div>
          </div>
          <div
            class="nut-menu-container-item "
            style="flex-basis: 50%;"
          >
            <div
              class="nut-menu-container-item-title "
            >
              活动商品
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
